# IIWE

./: CMakeLists.txt
assets/: player.pyxel
src/: Game.cpp  Game.h  main.cpp
